--- a/app-kotlin/src/main/res/layout/view_blur.xml
+++ b/app-kotlin/src/main/res/layout/view_blur.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/blur_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -49,4 +49,4 @@
 
     </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
